--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -47,9 +47,9 @@ jobs:
           sast-scan: true
         env:
           FOD_URL: https://ams.fortify.com
-          FOD_TENANT: ${{secrets.FOD_TENANT}}
+          FOD_TENANT: "FranklinBank24"
           FOD_USER: ${{secrets.FOD_USER}}
           FOD_PASSWORD: ${{secrets.FOD_PAT}}
-          FOD_RELEASE: ${{ secrets.FOD_RELEASE_ID }}
+          FOD_RELEASE: "1164126"
           EXTRA_PACKAGE_OPTS: -oss
           DO_EXPORT: true
