--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -48,8 +48,8 @@ jobs:
         env:
           FOD_URL: https://ams.fortify.com
           FOD_TENANT: "FranklinBank24"
-          FOD_USER: ${{secrets.FOD_USER}}
-          FOD_PASSWORD: ${{secrets.FOD_PAT}}
+          FOD_USER: "amariscurren@opentext.com"
+          FOD_PASSWORD: "C1b3rs3cur1ty?"
           FOD_RELEASE: "1164126"
           EXTRA_PACKAGE_OPTS: -oss
           DO_EXPORT: true
